# ntfy-wrapper

./: .gitignore  LICENSE  README.md  mermaids.md  pyproject.toml  requirements-dev.txt  requirements-rtd.txt
docs/source/: conf.py  index.rst
examples/: basic.py
ntfy_wrapper/: __init__.py  cli.py  notifier.py  utils.py
