[tool.poetry]
name = "ntfy-wrapper"
version = "0.1.7"
description = "Fast & Free notifications for your code: Python wrapper around the ntfy.sh notifications service."
authors = ["vict0rsch <vsch@pm.me>"]
license = "MIT"
readme = 'README.md'
packages = [{include = "ntfy_wrapper"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
typer = {extras = ["all"], version = "^0.7.0"}
xkcdpass = "^1.19.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
ipython = "^8.6.0"
ipdb = "^0.13.9"
sphinx = "^5.3.0"
myst-parser = "^0.18.1"
sphinx-rtd-theme = "^1.1.1"
sphinx-autoapi = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-ntfy = "ntfy_wrapper.cli:app"
